# openai-forward

./: .dockerignore  .env  .env.chatgpt  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_EN.md  README_ZH.md  _worker.js  deploy.md  deploy_en.md  docker-compose.yaml  openai-forward-config.example.yaml  openai-forward-config.yaml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  vercel.json  webui.Dockerfile  worker.js
.github/ISSUE_TEMPLATE/: bug-report-zh.yml  bug-report.yml  config.yml  feature_request-zh.yml  feature_request.yml
.github/data/: whisper.m4a
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  gh-release.yml  issue-close.yml  python-publish.yml  run_tests.yml
Examples/: .gitignore  beta.py  chat.py  chat.sh  chat_completion.py  completion.py  config.example.yaml  demo.py  embedding.py  gemini_pro.py  tool_calls.py  tts.py  vl.py  whisper.py
Examples/benchmark/: .env  .gitignore  README.md  post.lua  run.py
docker/: Dockerfile  Dockerfile-arm64
openai_forward/: __init__.py  __main__.py  _base.py  anthropic.py  app.py  base.py  cli.py  config.py  console.py  custom_slowapi.py  decorators.py  helper.py  nai.py  openai.py  router.py  settings.py  tool.py
openai_forward/cache/: __init__.py  chat.py  chat_completions.py  database.py  tokenizer.py
openai_forward/cache/chat/: chat_completions.py  response.py  tokenizer.py
openai_forward/cache/embedding/: response.py
openai_forward/config/: interface.py  settings.py
openai_forward/content/: __init__.py  _type.py  chat.py  config.py  decode.py  extra.py  helper.py  openai.py  whisper.py
openai_forward/forward/: __init__.py  base.py  core.py  custom_model.py  extra.py  openai.py  settings.py
openai_forward/forwarding/: __init__.py  base.py  extra.py  openai.py  settings.py
openai_forward/model_serve/: app.py  auto_model.py  auto_quat.py  helper.py  infer.py  qwen_vl.py
openai_forward/model_serve/api/: app.py  app2.py  helper.py  manager.py
openai_forward/model_serve/backend/: misc.py  transformers_backend.py  vllm_backend.py
openai_forward/routers/: openai_v1.py  schemas.py  v1.py
openai_forward/web/: index.js  interface.py  main.py  run.py
openai_forward/web/.streamlit/: config.toml.py
openai_forward/webui/: chat.py  helper.py  interface.py  run.py
scripts/: ai-forward-monitor.sh  keep_render_alive.py
tests/: .gitignore  conftest.py  test_api.py  test_app.py  test_chat_save.py  test_db.py  test_default_config.py  test_deploy.py  test_env.py  test_forwarding.py  test_http.py  test_settings.py  utils.py
