[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openai_forward"
description = "🚀 OpenAI API Reverse Proxy · ChatGPT API Proxy"
authors = [
    { name = "kunyuan", email = "beidongjiedeguang@gmail.com" },
]
license = "MIT"
requires-python = ">=3.6"
readme = "README.md"
keywords = ["openai", "chatgpt", "openai-api", "openai-proxy", "OpenAI API Forwarding", "streaming-api", "fastapi", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]

dependencies = [
    "loguru>=0.7.0",
    "fastapi>=0.90.0",
    "uvicorn>=0.23.1",
    "orjson>=3.9.2",
    "python-dotenv",
    "httpx>=0.24.1",
    "rich",
    "fire",
    "pytz",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/beidongjiedeguang/openai-forward"
Documentation = "https://github.com/beidongjiedeguang/openai-forward#openai-forward"
Issues = "https://github.com/beidongjiedeguang/openai-forward/issues"
Source = "https://github.com/beidongjiedeguang/openai-forward"

[project.optional-dependencies]
test = [
    "openai>=0.27.8",
    "pytest",
    "sparrow-python"
]

[project.scripts]
openai_forward = "openai_forward.__main__:main"
openai-forward = "openai_forward.__main__:main"
aifd = "openai_forward.__main__:main"

[tool.hatch.version]
path = "openai_forward/__init__.py"

[tool.isort]
profile = "black"

[tool.hatch.build]
include = [
    "openai_forward/**/*.py",
]
exclude = [
]

[tool.hatch.build.targets.wheel]
packages = ["openai_forward"]