[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openai_forward"
description = "ðŸš€ OpenAI-Forward æ˜¯ä¸€ä¸ªä¸“ä¸ºå¤§åž‹è¯­è¨€æ¨¡åž‹è®¾è®¡çš„é«˜çº§è½¬å‘ä»£ç†ï¼Œæä¾›åŒ…æ‹¬ç”¨æˆ·è¯·æ±‚é€ŸçŽ‡æŽ§åˆ¶ã€Tokené€ŸçŽ‡é™åˆ¶å’Œè‡ªå®šä¹‰APIå¯†é’¥ç­‰å¢žå¼ºåŠŸèƒ½ã€‚è¯¥æœåŠ¡å¯ç”¨äºŽä»£ç†æœ¬åœ°æ¨¡åž‹å’Œäº‘ç«¯æ¨¡åž‹ã€‚OpenAI API Reverse Proxy"
authors = [
    { name = "kunyuan", email = "beidongjiedeguang@gmail.com" },
]
license = "MIT"
requires-python = ">=3.6"
readme = "README.md"
keywords = ["openai", "chatgpt", "openai-api", "openai-proxy", "OpenAI API Forwarding", "streaming-api", "fastapi", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]

dependencies = [
    "loguru>=0.7.0",
    "fastapi>=0.90.0",
    "uvicorn>=0.21.0",
    "orjson>=3.9",
    "python-dotenv",
    "httpx>=0.24",
    "rich",
    "fire",
    "pytz",
    "slowapi==0.1.8",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/beidongjiedeguang/openai-forward"
Documentation = "https://github.com/beidongjiedeguang/openai-forward#openai-forward"
Issues = "https://github.com/beidongjiedeguang/openai-forward/issues"
Source = "https://github.com/beidongjiedeguang/openai-forward"

[project.optional-dependencies]
test = [
    "pytest",
    "openai>=0.27.8",
    "sparrow-python",
]

benchmark = [
    "openai>=0.27.8",
    "tiktoken",
]

dev = [
    "openai>=0.27.8",
    "sparrow-python",
    "schedule",
]

[project.scripts]
openai_forward = "openai_forward.__main__:main"
openai-forward = "openai_forward.__main__:main"
aifd = "openai_forward.__main__:main"

[tool.hatch.version]
path = "openai_forward/__init__.py"

[tool.isort]
profile = "black"

[tool.hatch.build]
include = [
    "openai_forward/**/*.py",
]
exclude = [
]

[tool.hatch.build.targets.wheel]
packages = ["openai_forward"]