[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openai_forward"
description = "ðŸš€ OpenAI-Forward æ˜¯ä¸€ä¸ªä¸“ä¸ºå¤§åž‹è¯­è¨€æ¨¡åž‹è®¾è®¡çš„é«˜çº§è½¬å‘ä»£ç†ï¼Œæä¾›åŒ…æ‹¬ç”¨æˆ·è¯·æ±‚é€ŸçŽ‡æŽ§åˆ¶ã€Tokené€ŸçŽ‡é™åˆ¶å’Œè‡ªå®šä¹‰APIå¯†é’¥ç­‰å¢žå¼ºåŠŸèƒ½ã€‚è¯¥æœåŠ¡å¯ç”¨äºŽä»£ç†æœ¬åœ°æ¨¡åž‹å’Œäº‘ç«¯æ¨¡åž‹ã€‚OpenAI API Reverse Proxy"
authors = [
    { name = "kunyuan", email = "beidongjiedeguang@gmail.com" },
]
license = "MIT"
requires-python = ">=3.8"
readme = "README.md"
keywords = ["openai", "chatgpt", "openai-api", "openai-proxy", "OpenAI API Forwarding", "streaming-api", "fastapi", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]

dependencies = [
    "loguru>=0.7.0",
    "fastapi>=0.90.0",
    "uvicorn>=0.21.0",
    "orjson>=3.9",
    "python-dotenv",
    "rich",
    "fire",
    "pytz",
    "slowapi==0.1.9",
    "aiohttp>=3.8.5",
    "flaxkv[client]>=0.2.7",
    "httpx[http2]>=0.26.0",
    "msgpack",
    "tiktoken>=0.5.1",
    "tomli",
    "tomli-w",
    "pyzmq",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/KenyonY/openai-forward"
Documentation = "https://github.com/KenyonY/openai-forward#openai-forward"
Issues = "https://github.com/KenyonY/openai-forward/issues"
Source = "https://github.com/KenyonY/openai-forward"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-aiohttp",
    "twisted",
    "trio",
    "psutil",
    "openai>=1.3.0",
]
webui = [
    "streamlit~=1.30.0",
]

benchmark = [
    "openai>=1.3.0",
]


dev = [
    "openai>=1.3.0",
    "sparrow-python",
    "schedule",
]

[project.scripts]
openai_forward = "openai_forward.__main__:main"
openai-forward = "openai_forward.__main__:main"
aifd = "openai_forward.__main__:main"

[tool.hatch.version]
path = "openai_forward/__init__.py"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''


[tool.hatch.build]
include = [
    "openai_forward/**/*.py",
]
exclude = [
]

[tool.hatch.build.targets.wheel]
packages = ["openai_forward"]
